[package]
name = "bombuscv-display"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# crates.io
clap = { version = "3.2.13", features = ["derive"] }
rppal = { version = "0.13.1", features = ["hal"] }
thiserror = "1.0.32"
chrono = "0.4.19"
procfs = "0.14.0"
ssd1306 = "0.7.0"
signal-hook = "0.3.14"
embedded-graphics = "0.7.1"
interfaces = "0.0.8"
# git
# interfaces = { git = "https://github.com/domenicquirl/interfaces-rs", branch = "dep-and-cleanup" }

[[bin]]
name = "dsp"
path = "src/main.rs"

[profile.release]
lto = true   # link-time-optimization
strip = true # strip symbols from binary
